--- a/src/estilos.css
+++ b/src/estilos.css
@@ -170,3 +170,47 @@ footer h6{
 #formulario button {
     margin: 20px 0 10px 0;
 }
+
+.cart{
+    display: flex;
+    width: 100%;
+    margin: 30px auto 20px auto;
+}
+
+#imgCart{
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#imgCart img {
+    width: 80%;
+    height: auto;
+}
+
+.detalleCart{
+    display: flex;
+    width: 80%;
+    padding: 20px;
+}
+
+.detalleCart button {
+    margin-right: 10px;
+}
+
+.total{
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+#cartEmpty{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 350px;
+    color:rgb(90, 138, 122);
+}
