--- a/src/estilos/estilos.css
+++ b/src/estilos/estilos.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    background-color: rgb(190, 245, 227);
+    background-color: #f8f8f8;
+    font-family: 'Roboto Serif', serif;
 }
 
 header {
@@ -14,7 +15,7 @@ header {
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
 
@@ -25,7 +26,6 @@ nav div {
 
 nav ul {
     display: flex;
-    justify-items: flex-end;
     align-items: center;
 }
 
@@ -35,14 +35,22 @@ h1 {
 }
 
 li {
-    padding: 0 60px;
-    list-style-type: none;
+    list-style: none;
 }
 
-li a {
-    text-decoration: none;
-    color: black;
+.liNav {
+    padding: 0 30px;
+    margin-right: 0;
+}
+
+.linkNavBar {
+    color: #6fcdcf;
     font-size: 1.5rem;
+    text-decoration: none;
+}
+
+.miNav{
+    padding-left: 25rem;
 }
 
 img {
@@ -109,7 +117,7 @@ img {
 }
 
 footer {
-    background-color: white;
+    background-color: #6fcdcf;
     width: 100%;
     padding: 20px 0;
     margin-top: 50px;
@@ -117,7 +125,7 @@ footer {
 
 footer h6{
     text-align: center;
-    color: rgb(90, 138, 122);
+    color: white;
 }
 
 #containerSpinner{
@@ -131,14 +139,13 @@ footer h6{
    margin: 200px 0;
 }
 
-.titulosProvisorios{
-    text-align: center;
-    margin-top: 150px;
-    height: 250px;
-}
-
 #listaProductos {
     margin-bottom: 50px;
+}
+
+#cardItem {
+    width: 15rem;
+    height: 100%;
 }
 
 .btnCompra {
@@ -150,14 +157,14 @@ footer h6{
 
 .myButton {
     margin: 10px 0;
-    background-color: rgb(90, 138, 122);
-    border-color: rgb(90, 138, 122);
+    background-color: #6fcdcf;
+    border-color: #6fcdcf;
 }
 
 .myButton:hover{
     background-color: white;
-    border-color: rgb(90, 138, 122);
-    color: rgb(90, 138, 122);
+    border-color: #6fcdcf;
+    color: #6fcdcf;
 }
 
 #formulario {
@@ -200,10 +207,12 @@ footer h6{
 }
 
 .total{
-    padding-right: 20px;
+    padding: 20px;
+    width: 83%;
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
 #cartEmpty{
@@ -212,5 +221,101 @@ footer h6{
     align-items: center;
     justify-content: center;
     height: 350px;
-    color:rgb(90, 138, 122);
+    color:#6fcdcf;
+}
+
+.iconosTips {
+    font-size: 1.5rem;
+    font-weight: 400;
+    padding-right: 1rem;
+}
+
+.iconosListaTips {
+    font-size: 1rem;
+    padding-right: 1rem;
+}
+
+.itemForm {
+    padding-top: 1rem;
+}
+
+.misTitulos {
+    text-align: center;
+    color: #0d6efd;
+}
+
+.tituloTips {
+    margin: 40px 0;
+}
+
+#imgLogo:hover {
+    transform: scale(1.1);
+    transition: 0.2s;
+}
+
+
+
+@media screen and (max-width: 768px) {
+
+    .miNav{
+        display: flex;
+        flex-direction: column;
+        padding-left: 4rem;
+    }
+
+    .miSubNav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #cardItem {
+        width: 70%;
+        height: 100%;
+        margin: auto;
+    }
+
+    .detalle {
+        flex-direction: column;   
+    }
+
+    .imgCard {
+        width: 80%;
+        margin: auto;
+    }
+
+    .descriptionCard {
+        width: 80%;
+        margin: auto;
+        text-align: center;
+    }
+
+    #description {
+        font-size: 12px;
+    }
+
+    .title{
+        font-size: 20px;
+    }
+
+    .bodyTips {
+        font-size: 12px;
+    }
+    
+    #formulario {
+        width: 80%;
+        margin: 30px auto;
+    }
+
+    #imgCart{
+        width: 30%;
+    }
+    
+    #imgCart img {
+        width: 70%;
+    }
+
+    .total{
+        width: 90%;
+        margin: auto;
+    }
 }
